added all items without final correction

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -15,7 +18,18 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="img-wrapper"><img src="../../assets/Rectangle.svg" alt="laptop photo"/></div>
+    <div class="rating">
+      <div class="stars">1.23<img src="../../assets/Star%201.svg" alt="small star"/></div>
+      <div class="price">15999</div>
+    </div>
+    <div class="about">
+      <p>Ноутбук Acer Aspire 3 A315-57G-336G<br>(NX.HZREU.01S) Charcoal Black</p>
+      <small>laptops</small>
+    </div>
+    <div class="buy">
+      <button>ADD TO CARD</button>
+    </div>
   </div>
 </main>
 </body>
