--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <Link rel="stylesheet" href="style.css"></Link>
+  <title>Online-store </title>
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <div class="outside">
+    <div class="inside">
+       <img src="img/laptop.jpg" alt="Lenovo" >
+        <div class="line">
+            <div class="btn-all">
+             <button class="btn-part">4.22 <img class="star" src="/components/card/img/star.png" alt="star">  </button>
+           </div>
+        <div>18899 </div>
+      </div>
+       <p> Ноутбук Lenovo IdeaPad <span> 3 15IIL05 (81WE012VRA)</span> Platinum Grey</p>
+      <h4>Laptops</h4>
+      <button class="button">Add To Cart</button>
+    </div>
+
+</div>
 </body>
 </html>
