--- a/components/card/index.html
+++ b/components/card/index.html
@@ -12,11 +12,37 @@
     }
   </style>
 </head>
+
 <body>
-<main>
+  <main>
   <div class="wrapper">
-    <!-- Card component -->
+     <!-- Card component -->
+     <div class="product-card">
+      <img  src="./product-foto.jpg" alt="product-foto">
+
+     </div>
+
+     <div >
+       <span class="product-rating" > 1.23 </span>
+       <span class="product-rating">  ☆<img src="star.png" alt="star"> </span>
+       <span class="product-price"> 15999 </span>
+     </div>
+
+     <div class="product-name">
+       <p> Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+     </div>
+     <div class="category">
+       <p>laptops</p>
+     </div>
+
+     <button class="section-add-to-cart">ADD TO CART</button>
+
+     <div class="decorative-line">  </div>
+
+
   </div>
 </main>
 </body>
 </html>
+
+
