--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
@@ -12,11 +13,32 @@
     }
   </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+
+      <div class="product-card">
+        <div class="container">
+          <img class="image-card" src="../7339ffc26ff8ba59aaef219d5e1b1c5a.jpeg" alt="image">
+          <div class="line">
+            <div class="rating-container ">
+              <span class="text">1.23</span>
+              <img src="../Star 1.png" alt="star">
+            </div>
+            <div class="price">15999</div>
+          </div>
+
+          <span class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
+          <spam class="article">laptops</spam>
+          <button class="button">Add To Cart</button>
+
+
+
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
