Fixed couple of minor bugs

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -16,7 +16,7 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
-    <!-- All the magic is in the js-file -->>
+    <!-- All the magic is in the js-file -->
   </div>
 </main>
 </body>
