--- a/components/card/index.html
+++ b/components/card/index.html
@@ -17,25 +17,20 @@
 <body>
   <main>
     <div class="wrapper">
-
-      <div class="product-card">
-        <div class="container">
-          <img class="image-card" src="../7339ffc26ff8ba59aaef219d5e1b1c5a.jpeg" alt="image">
-          <div class="line">
-            <div class="rating-container ">
-              <span class="text">1.23</span>
-              <img src="../Star 1.png" alt="star">
-            </div>
-            <div class="price">15999</div>
+      <div class="card">
+        <img class="card-image" src="../7339ffc26ff8ba59aaef219d5e1b1c5a.jpeg" alt="image">
+        <div class="card-head">
+          <div class="card-rating button-text ">
+            <span>1.23</span>
+            <img src="../Star 1.png" alt="star">
           </div>
-
-          <span class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
-          <spam class="article">laptops</spam>
-          <button class="button">Add To Cart</button>
-
-
-
+          <div class="price">15999</div>
         </div>
+        <div class="card-body">
+          <span class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
+          <p class="article">laptops</p>
+        </div>
+        <button class="button button-text">Add To Cart</button>
       </div>
     </div>
   </main>
