--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Card component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="cart-wrapper">
+        <img src="laptop.jpg" alt="laptop" title="laptop" class="laptop" />
+        <div class="price-rating">
+          <button class="grade-btn">0.92<img src="star.svg"></button>
+          <div class="sell">51999</div>
+        </div>
+        <p class="description">
+          Ноутбук Apple MacBook Pro 13" M1 512GB 2020 (Z11C000Z3) Custom Space
+          Gray
+        </p>
+        <div class="index-filter">laptops</div>
+        <button class="add-card-btn">ADD TO CARD</button>
+      </div>
+    </main>
+  </body>
 </html>
