--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
-<main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="product-card">
+      <div class="product-img">
+        <img src="/img/laptop.svg" alt="laptop">
+      </div>
+      <div class="product-content">
+        <div class="product-price-wrapper">
+          <div class="product-rating">
+            <span>1.23</span>
+            <img class="icon" src="/img/Star 1.svg" alt="star">
+          </div>
+          <div class="product-price">15999</div>
+        </div>
+        <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+        <p class="product-description">laptops</p>
+      </div>
+      <footer class="product-footer">
+        <button class="btn">Add to card</button>
+      </footer>
+    </div>
   </div>
-</main>
 </body>
 </html>
