--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Card component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        <!-- Card component -->
+        <div class="box">
+          <div
+            class="element-img"
+            style="
+              background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);
+            "
+          ></div>
+          <div class="os-product">
+            <div class="os-product-wrapper">
+              <div class="rating">
+                <span class="number">2.89</span>
+                <img class="bi bistar" src="./img/Star 2 (Stroke).png" alt=""> </i>
+              </div>
+              <div class="product-price">7000</div>
+            </div>
+            <h5 class="title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+            <p class="description">laptops</p>
+          </div>
+          <footer class="footer">
+          <div class="button">
+            ADD TO CART
+          </div>
+          </footer>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
+<div
+  class="os-product-img"
+  style="
+    background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);
+  "
+></div>
