--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="En">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bychkovyak Sergio-card</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+        <div class="product-list">
+            <div class="product-card">
+                <div class="product-img">
+                    <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="laptop acer">
+                </div>
+                <div class="product-content">
+                    <div class="price-wrapper">
+                        <div class="rating">
+                            <span>1.23</span>
+                            <i class="bi bi-star"></i>
+                        </div>
+                        <div class="product-price">15999</div>
+                    </div>
+                        <h5>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                        <p class="product-description">laptops</p>
+                </div>           
+                    <footer class="product-footer">
+                        <button class="button">                         
+                            Add To Cart
+                        </button>
+                    </footer>              
+            </div>            
+        </div>
 </body>
 </html>
