--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="main">
+      <div class="left">
+        <div class="text">
+          <
+        </div>
+      </div>
+      <div class="centr">
+        <div class="q">
+         <div class="text">
+           1
+         </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            2
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            3
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            4
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            5
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            6
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            7
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            8
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            9
+          </div>
+        </div>
+        <div class="q">
+          <div class="text">
+            10
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <div class="text">
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
