--- a/model.css
+++ b/model.css
@@ -9,6 +9,7 @@ sans-serif;
 font-size: 14px;
 }
 .smallplate {
+  box-shadow: 0 2px 8px rgb(0 0 0 / 14%);
   width: 317px;
   height: 394px;
   background: rgb(255, 255, 255);
