--- a/components/card/index.html
+++ b/components/card/index.html
@@ -15,8 +15,8 @@
               <div class="btn1-block">
                <button class="btn1">1.23 <img class="star" src="/components/card/img/Star 1.svg" alt="">  </button>
              </div>
-          <div>15999 </div>
-        </div>
+          <div class="price">15999 </div>
+       </div>
          <p> Ноутбук Acer Aspire <span> 3 A315-57G-336G (NX.HZREU.01S)</span> Charcoal Black </p>
          <h5>laptops </h5>
         <button class="btn">Add To Cart</button>
