--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,19 +4,42 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <Div class="content-box">
+      <div class="pfoto-box">
+        <img src="1.jpg" alt="photocard">
+     </div>
+
+      <div class="price-card">
+        <div class="box-1">
+            <div class="left">
+              1.23
+           </div>
+               <div class="right">
+                 &#10032;
+                </div>
+        </div>
+        <div class="price">
+            15999
+        </div>
+
+      </Div>
+
+    <!-- <Div class="main"> -->
+      <p> Acer Aspire 3 A315-57G-336G (NX.HZ.REU.O1S) Charcoal Black </p>
+    <!-- </Div> -->
+
+
   </div>
+
+
+
+
+
 </main>
-</body>
-</html>
+<!-- </body>
+</html> -->
