pagination component created

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <div class="paginator-container">
+        <div class="paginator-item"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
+        <div class="paginator-pages">
+          <div class="paginator-item active"><a href="#">1</a></div>
+          <div class="paginator-item"><a href="#">2</a></div>
+          <div class="paginator-item"><a href="#">3</a></div>
+          <div class="paginator-item"><a href="#">4</a></div>
+          <div class="paginator-item"><a href="#">5</a></div>
+          <div class="paginator-item"><a href="#">6</a></div>
+          <div class="paginator-item"><a href="#">7</a></div>
+          <div class="paginator-item"><a href="#">8</a></div>
+          <div class="paginator-item"><a href="#">9</a></div>
+          <div class="paginator-item"><a href="#">10</a></div>
+          <div class="paginator-item"><a href="#">11</a></div>
+          <div class="paginator-item"><a href="#">12</a></div>
+        </div>
+        <div class="paginator-item"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
+
+      </div>
+    </div>
+  </main>
 
 </body>
+
 </html>
