--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,19 +4,38 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
+  <div class="product-card">
+    <div class="image">
+      <img src="components\card\Rectangle.png" alt="">
+    </div>
+    <div class="content">
+      <div class="rate-price">
+        <div class="rate">
+          <div class="rate-value">
+            2.89
+          </div>
+          <div class="star">
+            <img src="components\card\Star 1.png" alt="">
+          </div>
+        </div>
+        <div class="price">
+          15999
+        </div>
+      </div>
+      <div class="description">
+        <p class="descr">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </p>
+        <p class="category">
+          laptop
+        </p>
+      </div>
+    </div>
+    <button class="add-cart-button">
+      ADD CART
+    </button>
   </div>
-</main>
 </body>
 </html>
