--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+  <main>
+    <div class="wraper">
+      <!-- Pagination component -->
+      <div class="pagination">
+        <div class="pag_page">
+          <a href="#prev" class="pag_link">
+            <i class="bi bi-chevron-left"></i>
+          </a>
+        </div>
+        <div class="pag_page"><a href="#1" class="pag_link">1</a></div>
+        <div class="pag_page"><a href="#2" class="pag_link">2</a></div>
+        <div class="pag_page"><a href="#3" class="pag_link">3</a></div>
+        <div class="pag_page"><a href="#4" class="pag_link">4</a></div>
+        <div class="pag_page"><a href="#5" class="pag_link">5</a></div>
+        <div class="pag_page"><a href="#6" class="pag_link">6</a></div>
+        <div class="pag_page"><a href="#7" class="pag_link">7</a></div>
+        <div class="pag_page"><a href="#8" class="pag_link">8</a></div>
+        <div class="pag_page"><a href="#9" class="pag_link">9</a></div>
+        <div class="pag_page"><a href="#10" class="pag_link">10</a></div>
+        <div class="pag_page"><a href="#11" class="pag_link">11</a></div>
+        <div class="pag_page"><a href="#12" class="pag_link">12</a></div>
+        <div class="pag_page">
+          <a href="#prev" class="pag_link">
+            <i class="bi bi-chevron-right"></i>
+          </a>
+        </div>
+      </div>
+  </main>
 
 </body>
+
 </html>
