--- a/components/card/index.html
+++ b/components/card/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="product-card">
     <div class="image">
-      <img src="components\card\Rectangle.png" alt="">
+      <img class="product-photo" src="Rectangle.png" alt="">
     </div>
     <div class="content">
       <div class="rate-price">
@@ -17,7 +17,7 @@
             2.89
           </div>
           <div class="star">
-            <img src="components\card\Star 1.png" alt="">
+            <img src="Star 1.png" alt="">
           </div>
         </div>
         <div class="price">
