--- a/components/card/index.html
+++ b/components/card/index.html
@@ -24,14 +24,12 @@
           15999
         </div>
       </div>
-      <div class="description">
-        <p class="descr">
-          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
-        </p>
-        <p class="category">
-          laptop
-        </p>
-      </div>
+      <h5 class="descr">
+        Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+      </h5>
+      <p class="category">
+        laptop
+      </p>
     </div>
     <button class="add-cart-button">
       ADD CART
