--- a/components/card/style.css
+++ b/components/card/style.css
@@ -9,6 +9,8 @@
   flex-direction: column;
   justify-content: space-between;
   width: 285px;
+  margin: 0 auto;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .product-photo {
@@ -48,14 +50,19 @@ font-size: 1.125rem;
   display: flex;
 }
 
-.decsription {
+.decsr {
   font-size: 1rem;
   margin-bottom: 8px;
   color: #2c2c2c;
   font-weight: 400;
   margin: 0;
 }
-
+h5 {
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 8px;
+  margin-top: 0;
+}
 .category {
   font-size: 0.75rem;
   color: #2c2c2c;
@@ -78,8 +85,7 @@ font-size: 1.125rem;
   border: none;
   border-radius: 0 0 3px 3px;
   cursor: pointer;
-  font-family: Montserrat,
-  sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: .875rem;
   font-weight: 400;
   line-height: 1;
