--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,18 +4,32 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="left-arrow">
+      <
+    </div>
+    <div class="rounds">
+      <div class="page1">1</div>
+      <div class="page2">2</div>
+      <div class="page3">3</div>
+      <div class="page4">4</div>
+      <div class="page5">5</div>
+      <div class="page6">6</div>
+      <div class="page7">7</div>
+      <div class="page8">8</div>
+      <div class="page9">9</div>
+      <div class="page10">10</div>
+      <div class="page11">11</div>
+      <div class="page12">12</div>
+    </div>
+    <div class="right-arrow">
+      >
+    </div>
   </div>
 </main>
 
