--- a/components/card/card.html
+++ b/components/card/card.html
@@ -15,7 +15,7 @@
         <div class="favorite_price">
           <span class="bloc_favorite">
             <span class="counter">123</span>
-            <span class="btn_favorite"><img src="/components/card/img/star.png" alt="star"></span>
+            <span class="btn_favorite"><img src="./img/star.png" alt="star"></span>
           </span>
           <span class="price">15999</span>
         </div>
