connected and used Bootstrap Icons

--- a/components/pagination/pagination.html
+++ b/components/pagination/pagination.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
+    integrity="sha384-ejwKkLla8gPP8t2u0eQyL0Q/4ItcnyveF505U0NIobD/SMsNyXrLti6CWaD0L52l" crossorigin="anonymous">
   <title>Document</title>
 </head>
 
@@ -13,7 +15,7 @@
   <main>
     <div class="wrapper">
       <section class="pagination">
-        <div class="btn-prev">&#60</div>
+        <div class="btn-prev"><i class="bi bi-chevron-left"></i></div>
         <ul>
           <li>1</li>
           <li>2</li>
@@ -28,7 +30,7 @@
           <li>11</li>
           <li>12</li>
         </ul>
-        <div class="btn-next">&#62</div>
+        <div class="btn-next"><i class="bi bi-chevron-right"></i></div>
       </section>
     </div>
   </main>
