--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
+
   <title>HTML/CSS Pagination component</title>
+
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -15,9 +17,29 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="size">
+      <img src="./images/arrow-left.png" alt="arrow-left">
+    </div>
+
+    <div class="numbers">
+      <div class="size">1</div>
+      <div class="size">2</div>
+      <div class="size">3</div>
+      <div class="size">4</div>
+      <div class="size">5</div>
+      <div class="size">6</div>
+      <div class="size">7</div>
+      <div class="size">8</div>
+      <div class="size">9</div>
+      <div class="size">10</div>
+      <div class="size">11</div>
+      <div class="size">12</div>
+    </div>
+
+    <div class="size">
+      <img src="./images/arrow-right.png" alt="arrow-right">
+    </div>
   </div>
 </main>
-
 </body>
 </html>
