--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -15,7 +18,19 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="card">
+      <div class="components">
+        <div class="img"></div>
+        <div class="numbers">
+          <div class="rating">1.23 <img class="star" src="Star%201.png" alt=""></div>
+          <div class="price">15999</div>
+        </div>
+        <h3 class="h3">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h3>
+        <span class="type">laptops</span><br>
+
+      </div>
+      <button type="" class="button">ADD TO CART</button>
+    </div>
   </div>
 </main>
 </body>
