online-store(card)

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
@@ -7,16 +8,35 @@
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 317px;
       margin: 100px auto;
     }
+
   </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <div class="icon">
+        <img src="/icons/Rectangle.svg" alt="icon">
+      </div>
+      <div class="up">
+        <div class="rating">
+          <div class="rating-wraper">
+            <div class="rating-number">1.23</div>
+            <div class="rating-star"><img src="/icons/Star 1.svg" alt="star"></div>
+          </div>
+          <div class="prise">15999</div>
+        </div>
+        <div class="title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+        <div class="laptop">laptops</div>
+      </div>
+      <footer class="down">
+        <p class="footer-descr">Add To Cart</p>
+      </footer>
+    </div>
+  </main>
 </body>
+
 </html>
