--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Pagination component</title>
+    <link rel="stylesheet" href="style.css" />
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
-</body>
+    <style>
+      .wrapper {
+        margin: 100px auto;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        <div class="circle start">&#60;</div>
+        <div class="cirle cirle-body">
+          <div class="circle item1">1</div>
+          <div class="circle item2">2</div>
+          <div class="circle item3">3</div>
+          <div class="circle item4">4</div>
+          <div class="circle item5">5</div>
+          <div class="circle item6">6</div>
+          <div class="circle item7">7</div>
+          <div class="circle item8">8</div>
+          <div class="circle item9">9</div>
+          <div class="circle item10">10</div>
+          <div class="circle item11">11</div>
+          <div class="circle item12">12</div>
+        </div>
+        <div class="circle end">&#62;</div>
+      </div>
+    </main>
+  </body>
 </html>
