--- a/components/card/index.html
+++ b/components/card/index.html
@@ -14,7 +14,7 @@
   <main>
     <div class="wrapper">
       <!-- Card component -->
-      <div class="prodact-d-flex-jc-space-b prodact-card font-montserrat-400">
+      <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
         <div class="prodact-image">
           <img src="./image/rectangle.png" alt="Image prodact">
         </div>
