--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,19 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+        <!-- Pagination component -->
+    <nav class="card-pagination font-montserrat-400">
+      <a class="panigation-arrow-left" href="#"><i class="bi bi-chevron-left"></i></a>
+      <ul class="pagination-block ">
+        <li class="pagination-item"><a href="#" >1</a></li>
+        <li class="pagination-item"><a href="#" >2</a></li>
+        <li class="pagination-item"><a href="#" >3</a></li>
+        <li class="pagination-item"><a href="#" >4</a></li>
+        <li class="pagination-item"><a href="#" >5</a></li>
+        <li class="pagination-item"><a href="#" >6</a></li>
+        <li class="pagination-item"><a href="#" >7</a></li>
+        <li class="pagination-item"><a href="#" >8</a></li>
+        <li class="pagination-item"><a href="#" >9</a></li>
+        <li class="pagination-item"><a href="#">10</a></li>
+        <li class="pagination-item"><a href="#">11</a></li>
+        <li class="pagination-item"><a href="#">12</a></li>
+      </ul>
+      <a class="panigation-arrow-right"href="#"><i class="bi bi-chevron-right"></i></a>
+    </nav>
   </div>
 </main>
 
