--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <style>
-    .wrapper {
-      margin: 100px auto;
+    :root {
+      --gray-100:#EDEDED;
+      --hover-color: #7E72F2;
     }
   </style>
 </head>
@@ -15,7 +16,28 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+
+    <div class="pagination">
+      <div class="pagination-item"><i class="bi bi-chevron-left"></i></div>
+
+      <div class="pagination-center">
+        <div class="pagination-item">1</div>
+        <div class="pagination-item">2</div>
+        <div class="pagination-item">3</div>
+        <div class="pagination-item">4</div>
+        <div class="pagination-item">5</div>
+        <div class="pagination-item">6</div>
+        <div class="pagination-item">7</div>
+        <div class="pagination-item">8</div>
+        <div class="pagination-item">9</div>
+        <div class="pagination-item">10</div>
+        <div class="pagination-item">11</div>
+        <div class="pagination-item">12</div>
+      </div>
+
+      <div class="pagination-item"><i class="bi bi-chevron-right"></i></div>
+    </div>
+
   </div>
 </main>
 
