--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,24 +18,24 @@
   <div class="wrapper">
 
     <div class="pagination">
-      <div class="pagination-item"><i class="bi bi-chevron-left"></i></div>
+      <button class="pagination-item"><i class="bi bi-chevron-left"></i></button>
 
       <div class="pagination-center">
-        <div class="pagination-item">1</div>
-        <div class="pagination-item">2</div>
-        <div class="pagination-item">3</div>
-        <div class="pagination-item">4</div>
-        <div class="pagination-item">5</div>
-        <div class="pagination-item">6</div>
-        <div class="pagination-item">7</div>
-        <div class="pagination-item">8</div>
-        <div class="pagination-item">9</div>
-        <div class="pagination-item">10</div>
-        <div class="pagination-item">11</div>
-        <div class="pagination-item">12</div>
+        <button class="pagination-item">1</button>
+        <button class="pagination-item">2</button>
+        <button class="pagination-item">3</button>
+        <button class="pagination-item">4</button>
+        <button class="pagination-item">5</button>
+        <button class="pagination-item">6</button>
+        <button class="pagination-item">7</button>
+        <button class="pagination-item">8</button>
+        <button class="pagination-item">9</button>
+        <button class="pagination-item">10</button>
+        <button class="pagination-item">11</button>
+        <button class="pagination-item">12</button>
       </div>
 
-      <div class="pagination-item"><i class="bi bi-chevron-right"></i></div>
+      <button class="pagination-item"><i class="bi bi-chevron-right"></i></button>
     </div>
 
   </div>
